# git-auto-merge

./: .flake8  .git-auto-merge.json  .git-auto-merge.schema.json  .gitflow-merge.json  .gitignore  .hadolint.yaml  .mise.toml  .pylintrc  .trivyignore  Dockerfile  Jenkinsfile  Makefile  README.md  Ritefile.yml  gitflow_merge.py  pylintrc  pyproject.toml  requirements.txt  test.py  test_gitflow_merge.py  test_utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
.rite/checksum/: build
scripts/: safety.sh
scripts/jenkinsfile/: JenkinsFileTest.groovy  Tests.groovy
src/: git_auto_merge.py  gitflow_merge.py  utils.py
src/gitflow_merge/: gitflow_merge.py  utils.py
src/tests/: test_gitflow_merge.py  test_utils.py
tests/: multi-project-config.json  test_gitflow_merge.py  test_utils.py
tests/integration/: test_cli.py
tests/snapshots/test_gitflow_merge/test_build_plan/: test_build_plan.txt
tests/snapshots/test_gitflow_merge/test_build_plan_works_when_multi_project/: test_build_plan_works_when_multi_project.txt
tests/snapshots/test_gitflow_merge/test_build_plan_works_when_only_main/: test_build_plan_works_when_only_main.txt
tests/snapshots/test_gitflow_merge/test_build_plan_works_when_only_main_and_develop/: test_build_plan_works_for_main_and_develop.txt
tests/unit/: test_git_auto_merge.py  test_gitflow_merge.py  test_properties.py  test_utils.py
tests/unit/snapshots/test_git_auto_merge/test_build_plan/: test_build_plan.txt
tests/unit/snapshots/test_git_auto_merge/test_build_plan_works_when_multi_project/: test_build_plan_works_when_multi_project.txt
tests/unit/snapshots/test_git_auto_merge/test_build_plan_works_when_only_main_and_develop/: test_build_plan_works_for_main_and_develop.txt
tests/unit/snapshots/test_git_auto_merge/test_weird_branch_bug/: test_weird_branch_bug.txt
tests/unit/test_files/: weird_branch_bug.json
