[project]
name = "git-auto-merge"
version = "1.3.10"
description = "A tool to automatically merge git branches"
authors = [{ name = "Clint M", email = "cmodien@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.6",
    "jsonpickle>=3.0.1",
    "loguru>=0.7.0",
    "packaging>=25",
]

[dependency-groups]
dev = [
    "check-jsonschema>=0.37.4",
    "deptry>=0.25.1",
    "hypothesis>=6.156.6",
    "pip-audit>=2.10.1",
    "pyright>=1.1.313",
    "pytest>=9",
    "pytest-cov>=7",
    "pytest-mock>=3",
    "pytest-randomly>=4.1.0",
    "pytest-snapshot>=0.9.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.22",
    "setuptools>=83",
    "zizmor>=1.27.0",
]

[project.scripts]
git-auto-merge = "git_auto_merge:cli"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# src holds flat modules (git_auto_merge.py, utils.py), not a package
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["git_auto_merge", "utils"]

[tool.pytest.ini_options]
# pytest-timeout: no test in this suite should run anywhere near this long
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W/F: pycodestyle+pyflakes (was flake8), I: import order (was isort),
# C90: complexity (was flake8 mccabe), PL: pylint rules, S: security (was bandit)
select = ["E", "W", "F", "I", "C90", "PL", "S"]
ignore = [
    # asserts are internal guards, not security controls; the CLI is never
    # run with python -O (was bandit B101)
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# bandit previously scanned src only; tests shell out and use magic values freely
"tests/**" = ["S", "PLR2004", "PLR0913"]
